# sicario-cli

./: .gitignore  .sicarioignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  design-tokens.css  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml  sicario-scan.example.yml  zigbuild-release.yml
.kiro/settings/: mcp.json
.sicario/: config.yaml  mcp_memory.db  patch_history.json
.sicario/cache/: vuln_cache.db-shm  vuln_cache.db-wal
Formula/: sicario.rb
convex/: convex.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
convex/convex/: analytics.ts  auth.ts  autoFixPRs.ts  billing.ts  crons.ts  deviceAuth.ts  emailJobs.ts  emails.ts  findings.ts  githubApp.ts  githubAppNode.ts  http.ts  invitations.ts  memberships.ts  organizations.ts  planEnforcer.ts  prChecks.ts  prScanWorkflow.ts  projects.ts  rbac.ts  releases.ts  scans.ts  scheduledScans.ts  schema.ts  sso.ts  teams.ts  (+2 more)
dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: TEMPLATE_BACKLOG.md
homebrew-sicario-cli/: README.md
sicario-cli/: .sicarioignore  Cargo.toml  mock-auth-server.py
sicario-cloud/: Cargo.toml  openapi.yaml
sicario-cloud/docs/: snowflake-bi-integration.md
sicario-cloud/src/: auth.rs  db.rs  export.rs  main.rs  models.rs  routes.rs  tests.rs  webhooks.rs
sicario-rules/: .gitignore  CONTRIBUTING.md  README.md
vuln-sandbox/: MANIFEST.md  README.md  smoke-test.sh
vuln-test/: vulnerable.js
(+231 files in other folders)
