[package]
name = "sicario-cloud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sicario Cloud Platform — REST API server for centralized findings management"

[[bin]]
name = "sicario-cloud"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "query"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (webhook delivery)
reqwest = { workspace = true }

# JWT auth
jsonwebtoken = "9.3"

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Async trait
async-trait = "0.1"

# CSV export
csv = "1.3"

# SHA-256
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
http-body-util = "0.1"
